Fix double scrollbar

--- a/clogMonitor/src/screens/DashboardScreen.css
+++ b/clogMonitor/src/screens/DashboardScreen.css
@@ -22,11 +22,9 @@
   text-align: left;
   max-width: 250px;
   width: 200px;
-  /* display: flex; */
-  /* align-self: center; */
   padding: 20px;
   background-color: #f9f9f9;
-  height: 100vh;
+  height: calc(100vh - 40px);
   z-index: 2;
   transition: 1s;
 }
